add publication date

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,4 +22,9 @@
         tools:text="@string/app_name"
         style="@style/ListItemBaseTextView" />
 
+    <TextView
+        android:id="@+id/publicationDate"
+        tools:text="@string/app_name"
+        style="@style/ListItemBaseTextView" />
+
 </LinearLayout>
